// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/common/PrivateRoute should return logged in if logged in 1`] = `
Object {
  "loggedIn": true,
}
`;

exports[`containers/common/PrivateRoute should return not logged in if logged out 1`] = `
Object {
  "loggedIn": false,
}
`;
